# superlite

./: CMakeLists.txt  HEADER  Makefile  Makefile.dependmod_beagle  README  banner.f  bbxsmod.f  bfxsmod.f  countersmod.f  dealloc_all.f  depend.sh  dependmodule.sh  elemdatamod.f  ffxsmod.f  fluxmod.f  fluxtally.f  gasmod.f  gridmod.f  groupmod.f  inputparmod.f  inputstrmod.f  ionsmod.f  miscmod.f  mpimod_mpi.f  mpimod_ser.f  nltemod.f  particle_advance.f90  particlemod.f90  physconstmod.f  randommod.f  read_bbxs_data.f  read_nlte_data.f  sourcemod.f  sourcetally.f  superlite.f90  timingmod.f  totalsmod.f  transportmod.f
Data/: data.ion  data.zeta
Data/Atoms/: data.atom.al1  data.atom.al2  data.atom.al3  data.atom.al4  data.atom.al5  data.atom.al6  data.atom.ar1  data.atom.ar2  data.atom.ar3  data.atom.ar4  data.atom.ar5  data.atom.b1  data.atom.b2  data.atom.b3  data.atom.b4  data.atom.be1  data.atom.be2  data.atom.be3  data.atom.ca1  data.atom.ca2  data.atom.ca3  data.atom.ca4  data.atom.ca5  data.atom.ca6  data.atom.ca7  data.atom.ca8  data.atom.ca9  data.atom.co1  data.atom.co2  data.atom.co3  data.atom.co4  data.atom.co5  data.atom.co6  data.atom.co7  data.atom.co8  data.atom.co9  data.atom.cr1  data.atom.cr2  data.atom.cr3  data.atom.cr4  (+128 more)
GAS/: Makefile  analytic_opacity.f90  eos_update.f  gas_setup.f  gas_update.f  opacity_planckmean.f  opacity_rossmean.f  physical_opacity.f  physical_opacity_nlte.f
GRID/: Makefile  emission_probability.f90  emitgroup.f  grid_setup.f  grid_volume.f  leakage_opacity.f  leakage_opacity11.f90
Input/: input.fluxwl  input.par.lte  input.par.nlte  input.wlgrid  input_w7.str
MISC/: Makefile  binsrch.f90  binsrch_decr.f90  lcase.f  locate.f  memusg.f  sorti.f  specint.f  warn.f
OUTPUT/: Makefile  open_logfiles.f  output_flux.f  output_grid.f  output_grp.f  output_profile.f  output_source.f
SOURCE/: Makefile  boundary_source.f90  interior_source.f90  source_transformdirection.f90  sourceenergy.f90  sourcenumbers.f90  vacancies.f90
TRANSPORT1/: Makefile  diffusion11.f90  transport11.f90
Testsuite/: README
Testsuite/A4/10d/lte/: input.str
Testsuite/A4/20d/lte/: input.str
Testsuite/A4/30d/lte/: input.par  input.str
Testsuite/A4/30d/nlte/: input.par
Testsuite/A4/5d/nlte/: input.str
Testsuite/s18/: input.par  input.str
Testsuite/sn1999em-like/: input.par  input.str
Testsuite/sn2017hcc-like/: input.par  input.str
Tools/: myfuncts.py  parse_hdf5_sndata.py  sgfilter.py  stella2superlite.py  wlgenadd.py
